--- a/monzzle/css/about.css
+++ b/monzzle/css/about.css
@@ -193,7 +193,7 @@
     top: 0;
     right: 0;
     overflow: hidden;
-    border-radius: 0 0 0 80px;
+    border-radius: 0 0 0 4vw;
     background: #E8D0B8;
 }
 
