--- a/lee/css/period.css
+++ b/lee/css/period.css
@@ -9,7 +9,7 @@
 
 .right {
     background: #DCDDDD;
-    width: calc(100% - var(--left-width) - var(--left-width));
+    width: calc(100% - var(--left-width));
     padding-left: var(--left-width);
     padding-top: var(--left-width);
 }
@@ -155,7 +155,7 @@
 
 .period {
     width: 30%;
-    padding: 5% 5%;
+    padding: 5% 0%;
     margin: 0 5%;
     position: relative;
     cursor: pointer;
