--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -1,3 +1,43 @@
+:root {
+    --btn-size: 50px;
+}
+
+@media (max-width:1200px) {
+    :root {
+        --btn-size: 45px;
+    }
+}
+
+@media (max-width:1100px) {
+    :root {
+        --btn-size: 40px;
+    }
+}
+
+@media (max-width:1000px) {
+    :root {
+        --btn-size: 35px;
+    }
+}
+
+@media (max-width:900px) {
+    :root {
+        --btn-size: 30px;
+    }
+}
+
+@media (max-width:800px) {
+    :root {
+        --btn-size: 25px;
+    }
+}
+
+@media (max-width:700px) {
+    :root {
+        --btn-size: 20px;
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -10,15 +50,19 @@ body {
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
-    background-color: powderblue;
+    background-color: #8C593B;
 }
 
 .book {
-    /* border: 1px solid black; */
+    height: 75vh;
+    width: calc(75vh * 0.7071428571428571);
     position: relative;
-    width: 350px;
-    height: 500px;
     transition: transform 0.5s;
+}
+
+.book-y {
+    width: 45vw;
+    height: calc(45vw * 1.414141414141414);
 }
 
 .paper {
@@ -45,7 +89,7 @@ body {
 .front {
     z-index: 1;
     backface-visibility: hidden;
-    border-left: 3px solid powderblue;
+    border-left: 3px solid #8C593B;
 }
 
 .back {
@@ -83,34 +127,36 @@ button:focus {
 }
 
 button:hover i {
-    color: #636363;
+    color: white;
 }
 
 i {
-    font-size: 50px;
-    color: gray;
+    font-size: var(--btn-size);
+    color: white;
 }
 
-#p6 {
-    z-index: 1;
+.phone {
+    display: none;
 }
 
-#p5 {
-    z-index: 2;
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain
 }
 
-#p4 {
-    z-index: 3;
-}
+@media (max-width:900px) {
+    .pc {
+        display: none;
+    }
 
-#p3 {
-    z-index: 4;
-}
+    .phone {
+        display: flex;
+    }
 
-#p2 {
-    z-index: 5;
-}
+    #paper {
+        width: 90vw;
+        height: 90vh;
+    }
 
-#p1 {
-    z-index: 6;
 }
